[workspace]
# The SNG enforcement plane: twelve library crates plus two binary
# crates (`sng-edge`, `sng-agent`).
#
#   sng-core           shared types, lifecycle / supervisor, error
#                      taxonomy, MessagePack envelope, signed-bundle
#                      verification
#   sng-pal            Platform Abstraction Layer for the endpoint
#                      client (Windows / macOS / Linux)
#   sng-comms          SN360 native protocol client (TLS 1.3 + h2 +
#                      MessagePack, batching, spool, replay-safe ack)
#   sng-policy-eval    local policy evaluator over verified bundles
#                      (hot-swap, sub-microsecond per-flow verdict)
#   sng-telemetry      five-stage local pipeline (collect / dedup /
#                      redact / enrich / egress)
#   sng-dns            recursive-resolver wrapper + reputation /
#                      category / sinkhole filter chain
#   sng-fw             firewall engine — L3-L7 policy, NAT, app
#                      awareness, deterministic nftables rule set
#   sng-ips            Suricata wrapper — rule sync, alert
#                      normalisation, supervisor + signal lifecycle
#   sng-swg            Envoy ext-authz handler — URL categorisation,
#                      malware verdict, rate-limit, bypass list
#   sng-ztna           Zero-Trust Network Access broker — mTLS device
#                      identity, posture binding, per-app access
#   sng-sdwan          SD-WAN steering brain — path catalog, probes,
#                      score, sticky-pin
#   sng-updater        self-update engine — signed manifests, dual-
#                      bank install, rollback-safe health window
#   sng-edge           edge VM appliance binary (composes every
#                      library above behind the supervisor)
#   sng-agent          endpoint client binary (subset: comms,
#                      policy_eval, telemetry, ztna, pal_*)
#
# Every member listed here must compile cleanly on every CI run —
# adding empty placeholders defeats the cargo-deny + clippy gates
# this workspace exists to enforce.
members = [
    "crates/sng-core",
    "crates/sng-pal",
    "crates/sng-comms",
    "crates/sng-policy-eval",
    "crates/sng-dlp",
    "crates/sng-telemetry",
    "crates/sng-dns",
    "crates/sng-fw",
    "crates/sng-ebpf",
    "crates/sng-ips",
    "crates/sng-swg",
    "crates/sng-ztna",
    "crates/sng-sdwan",
    "crates/sng-updater",
    "crates/sng-oidc",
    "crates/sng-ha",
    "crates/sng-edge",
    "crates/sng-agent",
    "crates/sng-mobile-core",
    "crates/sng-mobile-pal-ios",
    "crates/sng-mobile-pal-android",
    "crates/sng-mobile-sdk",
    "crates/sng-uniffi-bindgen",
    "crates/sng-appid",
]
# The kernel-space BPF object is a standalone `no_std` crate cross-compiled
# for a BPF target by the appliance image pipeline; it is never built by the
# host workspace. It declares its own `[workspace]` and is excluded here so
# host-side cargo never attempts to resolve or compile it.
exclude = ["crates/sng-ebpf/bpf"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "LicenseRef-Proprietary"
authors = ["ShieldNet Gateway Contributors"]
rust-version = "1.91"
repository = "https://github.com/kennguy3n/visible-fishbone"
description = "ShieldNet Gateway (SNG) - multi-tenant secure access platform"

# Shared dependency versions for every workspace crate. Anything
# that is shared by two or more crates lives here so version drift
# is impossible — each crate references `{ workspace = true }`
# rather than naming a version of its own.
[workspace.dependencies]
# Async runtime. Features are kept narrow at the workspace level;
# individual crates that need additional Tokio features add them
# locally rather than expanding the global feature set, which keeps
# binary size predictable on the resource-constrained `sng-agent`
# build (sub-15 MB resident, sub-0.1% idle CPU).
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "macros", "sync", "time", "signal"] }

# Serialization. MessagePack (rmp-serde) is the wire format for
# event envelopes and policy bundles — chosen to match the Go side
# (`github.com/vmihailenco/msgpack/v5` in
# `internal/nats/schema/envelope.go`). JSON is used for human-
# readable surfaces (REST, audit log, structured logs).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
rmp-serde = "1"

# Cryptography. The control-plane signs policy bundles and update
# manifests with Ed25519 (Go: `crypto/ed25519`), so the verifier on
# the edge / endpoint side must speak the exact same curve. `ring`
# is used as the rustls crypto backend (smaller, no aws-lc-sys
# build) and for general-purpose primitives (SHA-256, AEAD).
ed25519-dalek = { version = "2", default-features = false, features = ["std", "fast", "rand_core"] }
# Re-exported by ed25519-dalek when the `rand_core` feature is on,
# but the workspace pins the version explicitly so cargo-deny does
# not complain about a transient version skew between dependencies.
rand_core = { version = "0.6", default-features = false, features = ["std", "getrandom"] }
ring = "0.17"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Logging. tracing is the de-facto Rust async-logging stack; both
# the SDA (sn360-desktop-agent) and SKA (sn360-agent-k8s) workspaces
# use it, and the Go side emits structured logs through `slog`, so
# the operational shape on both sides is comparable.
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "json", "smallvec"] }

# Error handling.
thiserror = "2"
anyhow = "1"
async-trait = "0.1"

# CLI parsing. Used by the two binary crates (sng-edge, sng-agent)
# for their `--config`, `--health-bind`, `--updater-backend` etc.
# command-line surface. derive feature is the canonical clap usage
# pattern; env feature lets each `--flag` accept an env-var fallback
# (e.g. SNG_EDGE_CONFIG) so systemd / container manifests can drop
# the operator into the same shape as a CLI invocation.
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# Content scanning. `regex` + `aho-corasick` back the endpoint DLP
# classifier (`sng-dlp`): a compiled `RegexSet` evaluates the N
# pattern detectors in one pass, and a single `aho-corasick`
# automaton scans every keyword dictionary at once. Both are
# already in the dependency graph transitively (tracing-subscriber's
# env-filter), so pinning them here adds no new crates to audit.
regex = "1"
aho-corasick = "1"

# YARA signature scanning for the SWG response-body malware engine
# (`sng-swg::yara`). `yara-x` is VirusTotal's pure-Rust YARA
# implementation; it is selected over the C `libyara` bindings so the
# edge VM build stays free of a non-Rust toolchain dependency (the
# same "no OpenSSL-FFI" posture cargo-deny enforces) and so the crate
# cross-compiles cleanly for every target in the support matrix.
# Default features are disabled to keep the dependency surface lean —
# the built-in rules rely on raw string/hex/regex patterns plus the
# pure-Rust `math` (entropy) and `hash` modules, none of which pull a
# C dependency (`magic-module` would link libmagic and is left off).
yara-x = { version = "1", default-features = false, features = [
    "constant-folding",
    "fast-regexp",
    "math-module",
    "hash-module",
] }

# Unicode NFC normalization for the DLP classifier: incoming content
# is canonicalised before regex/keyword scanning so Arabic diacritics
# and CJK full-/half-width variants compare equal to the patterns the
# control plane ships. The Go side mirrors this with
# `golang.org/x/text/unicode/norm`.
unicode-normalization = "0.1"

# On-device ONNX inference for the endpoint DLP ML-NER classifier
# (`sng-dlp::ml_classifier`). The NER head is a small multinomial-
# logistic-regression ONNX graph shipped inside the Ed25519-signed
# endpoint policy bundle; `ort` (the ONNX Runtime Rust binding) runs
# it locally with no network call, well under the 50 ms/document
# budget. Pinned to an exact release-candidate so the inference ABI
# cannot drift between crates. The classifier degrades to a real
# regex-only NER fallback when no model is loaded, so this dependency
# is never on the fail-safe path.
#
# We deliberately use `load-dynamic` (dlopen the ONNX Runtime shared
# library at first use) and DISABLE the default `download-binaries`
# feature. `download-binaries` pulls `ureq` as a build-dependency with
# its `native-tls` feature hard-wired on, which drags `native-tls` →
# `openssl` / `openssl-sys` into the build graph — all three are
# explicitly banned in `deny.toml` (the platform standard is rustls, no
# OpenSSL FFI). `load-dynamic` resolves the runtime library from
# `ORT_DYLIB_PATH` (or the system loader path), so the ONNX Runtime
# binary is provisioned by the environment / packaging rather than
# fetched over TLS at build time. See `deny.toml` and the environment
# blueprint for how `libonnxruntime` (v1.22, matching this pin's
# `ORT_API_VERSION`) is supplied.
ort = { version = "=2.0.0-rc.10", default-features = false, features = [
    "std",
    "ndarray",
    "tracing",
    "load-dynamic",
] }

# Utilities.
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
parking_lot = "0.12"
arc-swap = "1"
once_cell = "1"

# Configuration loading. `figment` is the canonical layered-config
# library and matches the Go control plane's preference for env
# vars + optional file overlay.
# `test` feature exposes `figment::Jail` for per-test env-var isolation;
# it is sound to leave on in non-test builds (it adds no runtime cost
# unless `Jail::expect_with` is called) and avoids per-crate feature
# gating.
figment = { version = "0.10", features = ["env", "toml", "test"] }
toml = "0.8"

# Filesystem watching (used by sng-pal for config reload signal on
# Linux/macOS where SIGHUP semantics differ from Windows).
notify = "7"

# Anonymous memory-mapped buffers for the edge commodity-hardware
# packet buffer pool (zero-copy frame substrate). Cross-platform
# (anonymous mmap on POSIX, VirtualAlloc on Windows) so the pool and
# its tests build everywhere.
memmap2 = "0.9"

# Platform-specific. nix is used for POSIX (Linux + macOS) syscalls
# that don't have a libstd equivalent (TPROXY, NETLINK, kqueue).
# The `sched` feature adds sched_setaffinity / CpuSet for the edge
# commodity-hardware CPU-affinity pinning (Linux-only; the calls are
# cfg-gated at the call site). The `inotify` feature backs the
# endpoint DLP file-write / print-spool channel (`sng-pal::dlp`):
# edge-triggered `IN_CLOSE_WRITE` delivery replaces a poll loop so
# the agent holds the sub-0.1% idle-CPU budget on a quiet endpoint.
# The `socket` feature backs the DLP USB / removable-media channel:
# a `NETLINK_KOBJECT_UEVENT` netlink socket (the same kernel uevent
# multicast `udev` itself consumes) delivers device add/remove
# edge-triggered instead of polling `/proc/mounts`. windows is used
# for the Windows-side WFP / TPM hooks. Both are version-pinned here
# even when only one crate consumes them so they cannot drift
# between crates.
nix = { version = "0.30", default-features = false, features = ["fs", "user", "process", "signal", "net", "hostname", "sched", "inotify", "socket", "poll"] }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_System_SystemInformation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    # Endpoint DLP (`sng-pal::dlp::windows`): the clipboard-format
    # listener chain (`AddClipboardFormatListener` + a message-only
    # window pumping `WM_CLIPBOARDUPDATE`), the WMI removable-volume
    # event sink (`Win32_VolumeChangeEvent` via the COM `IWbemServices`
    # surface), and the print-spooler change notification
    # (`FindFirstPrinterChangeNotification`).
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_System_Wmi",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_IO",
    "Win32_System_Rpc",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Printing",
    "Win32_Storage_FileSystem",
] }

# Pure-Rust X11 client (endpoint DLP clipboard channel on Linux,
# `sng-pal::dlp::linux`). x11rb speaks the X11 wire protocol directly
# over its `RustConnection` (no libxcb / C-toolchain linkage, matching
# the "no OpenSSL-FFI" posture cargo-deny enforces) and exposes the
# XFIXES extension, whose `SelectionNotify` events make CLIPBOARD
# ownership changes edge-triggered — the agent reads the new selection
# exactly when it changes rather than polling. `default-features =
# false` drops the optional libxcb bridge; only the XFIXES extension is
# pulled in.
x11rb = { version = "0.13", default-features = false, features = ["xfixes"] }

# IP / CIDR utilities (shared across pal posture + future fw rules).
ipnet = { version = "2", features = ["serde"] }

# Low-level socket configuration. Used by `sng-ha` to build the
# VRRP multicast UDP socket with the socket options the bare
# `tokio::net::UdpSocket` constructor does not expose (SO_REUSEADDR
# for two edge instances co-binding the VRRP port in tests,
# IP_MULTICAST_TTL = 255 per RFC 5798 §5.1.1.3, and the
# IP_ADD_MEMBERSHIP join on 224.0.0.18). The configured `socket2`
# socket is then handed to tokio via `UdpSocket::from_std`.
socket2 = { version = "0.6", features = ["all"] }

# Networking + TLS stack (shared across sng-comms, sng-swg, sng-ztna,
# and the binaries). rustls is pinned with the `ring` crypto provider
# explicitly so cargo-deny's bans block on `aws-lc-sys` (and any
# OpenSSL-FFI fallback) hold even when a future crate adds a feature
# that would otherwise activate the alternate backend. The `h2`
# crate is the pure-Rust HTTP/2 implementation used directly (not via
# hyper) so the client can drive flow-controlled streams without
# pulling in the full hyper server / service stack.
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls-pki-types = "1"
webpki-roots = "1"
h2 = "0.4"
http = "1"
http-body = "1"
url = "2"
zstd = "0.13"
rand = "0.8"

# OIDC client (sng-oidc). `reqwest` is the HTTP client used for
# OpenID Connect discovery, JWKS fetch, and token exchange. It is
# pinned `default-features = false` so the OpenSSL-FFI `native-tls`
# default backend never activates — the workspace mandates `rustls`
# with the `ring` provider (see deny.toml bans on openssl /
# openssl-sys / native-tls). `http2` keeps the connection shape
# consistent with the rest of the gateway's h2 transport.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "http2", "charset"] }
# ID-token validation. jsonwebtoken v9 uses `ring` by default (no
# OpenSSL), which satisfies the same `rustls`/`ring`-only crypto
# posture the bans block enforces.
jsonwebtoken = "9"

# UniFFI foreign-function-interface generator (sng-mobile-sdk). The
# mobile SDK uses the procedural-macro flavour (no UDL), so the
# binding metadata is embedded into the compiled `sng_mobile_sdk`
# cdylib and the `sng-uniffi-bindgen` binary reads it back via
# `generate --library`. Pinned here so the runtime scaffolding
# (`sng-mobile-sdk`, the `tokio` feature) and the generator
# (`sng-uniffi-bindgen`, the `cli` feature) can never drift apart.
# All of UniFFI's dependency subtree is MIT/Apache-2.0 (cargo-deny
# licences gate stays green); it pulls no OpenSSL / native-tls /
# async-std (the deny.toml bans stay satisfied).
uniffi = { version = "0.31" }

# Secret-buffer zeroization. The mobile agent core (`sng-mobile-core`)
# holds short-lived OIDC tokens and Ed25519 enrolment key material in
# memory; `zeroize` wipes those buffers on drop so a process-memory
# capture cannot recover a token / key after it is no longer needed.
# Same crate the sn360-* agent workspaces use for their secret wrappers.
zeroize = { version = "1", features = ["derive"] }

# Test-only dependencies.
tempfile = "3"
pretty_assertions = "1"
# In-process mock OIDC server for sng-oidc integration tests
# (discovery → authorize-url → token exchange → refresh) so the
# suite exercises the full HTTP path with zero real network calls.
wiremock = "0.6"
# rcgen mints self-signed leaf + CA certificates for the in-process
# TLS server used by sng-comms integration tests. Pinned at the
# workspace level so future crates that need an ephemeral test PKI
# (sng-policy-eval bundle pull, sng-edge enrolment) share the same
# version.
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }

# Android Platform Abstraction Layer dependencies. These are
# Android-only — they are referenced exclusively from
# `[target.'cfg(target_os = "android")'.dependencies]` in
# `sng-mobile-pal-android`, so they never enter the host
# (Linux / macOS / Windows) build graph that CI compiles and
# cargo-deny audits. Versions are pinned here so the Android PAL
# and any future Android bridge crate cannot drift.
#
#   * `jni`         — safe JNI bindings used to call the Android
#                     framework (KeyStore, KeyguardManager,
#                     EncryptedSharedPreferences, VpnService,
#                     Custom Tabs). Its safe surface keeps every
#                     PAL backend `unsafe`-free; the lone scoped
#                     `#[allow(unsafe_code)]` lives in the crate's
#                     `jni_bridge` module for the unavoidable
#                     ndk-context raw-pointer conversion.
#   * `ndk-context` — retrieves the host app's `JavaVM` + Android
#                     `Context` (the JNI bootstrap seam) without
#                     the PAL having to thread them through every
#                     constructor.
jni = "0.21"
ndk-context = "0.1"

# Internal crate references — each member crate is reachable via
# `{ workspace = true }` from every other crate without having to
# repeat the relative path. New crates added in later phases just
# get one more entry here.
sng-core = { path = "crates/sng-core" }
sng-pal = { path = "crates/sng-pal" }
sng-comms = { path = "crates/sng-comms" }
sng-policy-eval = { path = "crates/sng-policy-eval" }
sng-dlp = { path = "crates/sng-dlp" }
sng-telemetry = { path = "crates/sng-telemetry" }
sng-dns = { path = "crates/sng-dns" }
sng-fw = { path = "crates/sng-fw" }
sng-ebpf = { path = "crates/sng-ebpf" }
sng-ips = { path = "crates/sng-ips" }
sng-swg = { path = "crates/sng-swg" }
sng-ztna = { path = "crates/sng-ztna" }
sng-sdwan = { path = "crates/sng-sdwan" }
sng-updater = { path = "crates/sng-updater" }
sng-oidc = { path = "crates/sng-oidc" }
sng-ha = { path = "crates/sng-ha" }
sng-mobile-core = { path = "crates/sng-mobile-core" }
sng-mobile-pal-ios = { path = "crates/sng-mobile-pal-ios" }
sng-mobile-pal-android = { path = "crates/sng-mobile-pal-android" }
sng-mobile-sdk = { path = "crates/sng-mobile-sdk" }
sng-appid = { path = "crates/sng-appid" }

# Workspace-wide lints. Set at the workspace level so a new crate
# added in a later phase automatically inherits the same posture
# without having to opt in. `unsafe_code = "forbid"` is the policy
# for every crate in the workspace EXCEPT modules that legitimately
# need a syscall whose Rust binding has no safe wrapper — those
# modules locally re-enable `unsafe_code = "allow"` on the specific
# `mod` they need and document why in a doc-comment. The default is
# forbid so the audit trail is "look for `unsafe_code = "allow"`
# overrides", not "look for `unsafe` blocks in 30 crates".
[workspace.lints.rust]
# `deny` rather than `forbid` so leaf modules that genuinely
# need an unsafe syscall (sng-pal's per-OS sysctl/GetComputerNameExW
# wrappers, future kernel-bridge crates) can relax the lint
# locally with `#[allow(unsafe_code)]` on the specific block and a
# documented rationale. The default is still deny so any uncommented
# unsafe block fails the build.
unsafe_code = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
# `pedantic` is the right default tier for this workspace — it
# catches real correctness issues (cast_lossless, needless_pass_by_value,
# inefficient_to_string) without the false positives of `nursery` or
# `restriction`. Specific noisy lints are downgraded below.
pedantic = { level = "warn", priority = -1 }
# Allow-listed clippy::pedantic lints that don't add signal on this
# codebase: documentation-completeness lints, "must_use" pedantry,
# and the "wrap every product name in backticks" lint which produces
# pages of false positives on the architecture doc-comments.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
# `Result` payload size: `figment::Error` is intentionally large
# (it carries the source path / span / metadata for a config
# error). Boxing the whole `ConfigError` enum just to shrink the
# pre-Err discriminant would lose the source-error trail
# `thiserror::Error` provides for free. Allow the lint at the
# workspace level rather than per-call-site.
result_large_err = "allow"
# Trivial `&u64` parameters on serde helpers do not warrant a
# rewrite to by-value.
trivially_copy_pass_by_ref = "allow"
# `Option<&T>` vs `&Option<T>` is fine in private trait surfaces.
ref_option = "allow"
# These are correctness lints (NOT subjective style). Set to
# `warn` rather than `deny` so test code that legitimately uses
# `.expect("fixture")` for fast-failing test assertions does not
# require per-module allow attributes. Production code paths
# still get the warning, which is what CI is for. `todo` /
# `unimplemented` stay at deny — those are flags for unfinished
# code and must never reach main.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "deny"
unimplemented = "deny"

# Release profile: optimise for binary size on the edge VM image
# and the endpoint agent (resident-memory budget is sub-15 MB for
# `sng-agent`). `panic = "abort"` removes the unwinder which buys
# both binary size and a small startup-time win.
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true

# CI-oriented release profile: same optimisation flags as `release`
# but with thin LTO and multiple codegen units for dramatically
# faster compile times. Used by the `build` and `e2e` CI jobs where
# wall-clock matters more than the last few percent of binary size.
# Reference: sn360-desktop-agent/Cargo.toml uses the same split.
[profile.ci]
inherits = "release"
lto = "thin"
codegen-units = 4
strip = "symbols"
