[package]
name = "sng-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "ShieldNet Gateway endpoint agent binary: composes the comms / policy_eval / telemetry / ztna / pal subsystems behind the sng-core::supervisor harness."

[[bin]]
name = "sng-agent"
path = "src/main.rs"

[lib]
name = "sng_agent"
path = "src/lib.rs"

[dependencies]
sng-core = { workspace = true }
sng-pal = { workspace = true }
sng-comms = { workspace = true }
sng-policy-eval = { workspace = true }
sng-telemetry = { workspace = true }
sng-ztna = { workspace = true }

tokio = { workspace = true, features = ["sync", "time", "macros", "rt-multi-thread", "signal"] }
async-trait = { workspace = true }
arc-swap = { workspace = true }
parking_lot = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { workspace = true }

chrono = { workspace = true }
ed25519-dalek = { workspace = true }
url = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
base64 = { workspace = true }
ipnet = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt", "macros", "rt-multi-thread", "sync", "time"] }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
rcgen = { workspace = true }

[lints]
workspace = true
