[package]
name = "sng-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "ShieldNet Gateway endpoint agent binary: composes the comms / policy_eval / telemetry / ztna / pal subsystems behind the sng-core::supervisor harness."

[[bin]]
name = "sng-agent"
path = "src/main.rs"

[lib]
name = "sng_agent"
path = "src/lib.rs"

[dependencies]
sng-core = { workspace = true }
sng-pal = { workspace = true }
sng-comms = { workspace = true }
sng-policy-eval = { workspace = true }
sng-telemetry = { workspace = true }
sng-ztna = { workspace = true }

tokio = { workspace = true, features = ["sync", "time", "macros", "rt-multi-thread", "signal"] }
async-trait = { workspace = true }
arc-swap = { workspace = true }
parking_lot = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { workspace = true }

chrono = { workspace = true }
ed25519-dalek = { workspace = true }
url = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
base64 = { workspace = true }
ipnet = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt", "macros", "rt-multi-thread", "sync", "time"] }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
rcgen = { workspace = true }
# In-process control-plane harness for `tests/agent_e2e.rs`.
# `bytes`/`http`/`h2`/`tokio-rustls` reproduce the same TLS+h2
# server shape that `sng-comms/tests/integration.rs` uses, so
# the supervisor talks to a real rustls + h2 endpoint instead
# of a mocked transport. `rmp-serde` is the wire codec for
# policy bundle claims and telemetry envelopes.
bytes = { workspace = true }
http = { workspace = true }
h2 = { workspace = true }
tokio-rustls = { workspace = true }
rmp-serde = { workspace = true }

[lints]
workspace = true
