[package]
name = "sng-comms"
description = "ShieldNet Gateway (SNG) — SN360 native protocol client: TLS 1.3 + HTTP/2 + MessagePack transport for agent / edge ↔ control plane communication."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Workspace runtime + serde stack.
tokio = { workspace = true, features = ["net", "io-util"] }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }
rand = { workspace = true }

# Networking + TLS.
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pki-types = { workspace = true }
webpki-roots = { workspace = true }
h2 = { workspace = true }
http = { workspace = true }
url = { workspace = true }
zstd = { workspace = true }

# Cryptography for policy bundle verification (Ed25519) and ETag
# parsing (base64 / hex).
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

# Local crate dependency: sng-core supplies the shared id newtypes,
# PolicyBundle / PolicyBundleClaims / PolicyVerifier, Envelope wire
# shape, and ConfigError taxonomy that this crate plugs into.
sng-core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["net", "io-util", "macros", "rt-multi-thread"] }
rcgen = { workspace = true }
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
